# OpenCL-CSFML-Mandelbrot

./: CMakeLists.txt  README.md  main.c
scripts/: cmake-makefile  cmake-xcode
